fix(link): align icons correctly with multi-line text

--- a/src/components/Subnav/subnav-item.css
+++ b/src/components/Subnav/subnav-item.css
@@ -5,8 +5,6 @@
 
 ::slotted(*) {
   --sgds-font-size-2: var(--sgds-font-size-1);
-  display: flex;
-  gap: var(--sgds-gap-2-xs);
   --sgds-link-color-default: var(--sgds-color-default);
   text-decoration: none !important;
   font-size: var(--sgds-font-size-2, var(--sgds-font-size-1));
